...
            ContentView()
                .environment(\.managedObjectContext, persistenceController.container.viewContext)
        }
        .handlesExternalEvents(matching: Set(["main", ""]))
        .commands {
            CommandGroup(replacing: .appTermination) {
                Button("Quit Enclave Bridge") {
                    EnclaveApp.socketServer.stop()
                    NSApplication.shared.terminate(nil)
                }
                .keyboardShortcut("q")
            }
        }
...
